--- a/css/style.css
+++ b/css/style.css
@@ -1,303 +1,167 @@
 @charset "UTF-8";
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-nav,
-section,
-summary {
-  display: block; }
-
-audio,
-canvas,
-video {
-  display: inline-block; }
-
-audio:not([controls]) {
-  display: none;
-  height: 0; }
-
-[hidden],
-template {
-  display: none; }
-
-html {
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%; }
-
-body {
-  margin: 0; }
-
-a {
-  background: transparent; }
-
-a:focus {
-  outline: thin dotted; }
-
-a:active,
-a:hover {
-  outline: 0; }
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0; }
-
-abbr[title] {
-  border-bottom: 1px dotted; }
-
-b,
-strong {
-  font-weight: bold; }
-
-dfn {
-  font-style: italic; }
-
-hr {
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0; }
-
-mark {
-  background: #ff0;
-  color: #000; }
-
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  font-size: 1em; }
-
-pre {
-  white-space: pre-wrap; }
-
-q {
-  quotes: "\201C" "\201D" "\2018" "\2019"; }
-
-small {
-  font-size: 80%; }
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline; }
-
-sup {
-  top: -0.5em; }
-
-sub {
-  bottom: -0.25em; }
-
-img {
-  border: 0; }
-
-svg:not(:root) {
-  overflow: hidden; }
-
-figure {
-  margin: 0; }
-
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em; }
-
-legend {
-  border: 0;
-  padding: 0; }
-
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  margin: 0; }
-
-button,
-input {
-  line-height: normal; }
-
-button,
-select {
-  text-transform: none; }
-
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer; }
-
-button[disabled],
-html input[disabled] {
-  cursor: default; }
-
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0; }
-
-input[type="search"] {
-  -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box; }
-
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
-
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0; }
-
-textarea {
-  overflow: auto;
-  vertical-align: top; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 *, *:before, *:after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 body {
   position: relative;
-  background-image: url(../images/bg.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
+  background-color: #34495E;
   font-family: "Poppins", sans-serif;
   font-size: 100%;
   font-weight: 300;
-  color: #fff;
+  color: #2C3E50;
   line-height: 1.5;
   margin: 0;
-  padding: 10% 25px 0; }
+  padding: 5% 25px 0;
+}
 
 .wrap {
-  background-color: rgba(0, 0, 0, 0.65);
+  background-color: #eaeaea;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 25px 50px; }
+  padding: 0;
+}
 
 .screen-reader-text {
   position: absolute;
   top: -9999px;
-  left: -9999px; }
+  left: -9999px;
+}
 
 .clearfix:after {
   content: "";
   display: table;
-  clear: both; }
+  clear: both;
+}
 
 a {
   color: #fff;
   text-decoration: none;
-  border-bottom: 1px dotted #fff;
-  transition: all 0.3s ease; }
+  transition: all 0.3s ease;
+}
 
 .link {
   position: absolute;
   top: 10px;
   left: 10px;
   text-transform: uppercase;
-  font-size: 0.9em; }
-  .link:before {
-    content: "←";
-    color: #fff;
-    margin-right: 5px; }
+  font-size: 0.9em;
+}
+.link:before {
+  content: "←";
+  color: #fff;
+  margin-right: 5px;
+}
+
+.content {
+  padding: 50px;
+}
 
 h1 {
   font-size: 3.25vw;
   font-weight: 300;
-  text-align: center; }
+  text-align: center;
+  margin: 0 0 0.67em;
+}
 
 h2 {
   font-size: 2.5em;
-  font-weight: 300; }
+  font-weight: 300;
+}
 
 p {
-  margin: 2.5em 0; }
+  margin: 2.5em 0;
+}
 
 footer {
-  text-align: center; }
+  text-align: center;
+  margin: 1em 0 0;
+  color: #eaeaea;
+}
 
 .nav-primary {
-  padding: 25px 0; }
-  .nav-primary ul {
-    margin: 0;
-    padding: 0;
-    text-align: center; }
-  .nav-primary li {
-    position: relative;
-    list-style-type: none;
-    display: inline-block;
-    margin: 0 2.5vw; }
-    .nav-primary li:hover > a {
-      border-bottom: 2px solid #fff; }
-  .nav-primary a {
-    text-decoration: none;
-    color: #fff;
-    padding: 0 3px;
-    border-bottom: 2px solid transparent; }
-    .nav-primary a:hover, .nav-primary a:active, .nav-primary a:focus {
-      border-bottom: 2px solid #fff; }
-  .nav-primary ul ul {
-    display: none;
-    position: absolute;
-    top: calc(100% + 3px);
-    left: 0;
-    z-index: 3; }
-  .nav-primary ul ul ul {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 100%;
-    z-index: 3; }
-  .nav-primary ul li:hover > ul, .nav-primary ul li:active > ul, .nav-primary ul li:focus > ul,
-  .nav-primary ul ul li:hover > ul,
-  .nav-primary ul ul li:active > ul,
-  .nav-primary ul ul li:focus > ul {
-    display: block; }
-  .nav-primary .sub-menu {
-    text-align: left; }
-  .nav-primary .sub-menu li {
-    display: block;
-    margin: 0; }
-    .nav-primary .sub-menu li:hover > a {
-      border-bottom: none; }
-  .nav-primary .sub-menu a {
-    display: block;
-    color: #fff;
-    white-space: nowrap;
-    border-bottom: none;
-    padding: 10px 16px;
-    background-color: #C0392B; }
-    .nav-primary .sub-menu a:hover, .nav-primary .sub-menu a:active, .nav-primary .sub-menu a:focus {
-      background-color: #16a085; }
+  background-color: #fff;
+}
+.nav-primary ul {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+.nav-primary li {
+  position: relative;
+  list-style-type: none;
+  display: inline-block;
+  margin: 0 1vw;
+}
+.nav-primary li:hover > a {
+  background-color: #34495E;
+  color: #fff;
+}
+.nav-primary a {
+  display: block;
+  text-decoration: none;
+  color: #34495E;
+  background-color: #fff;
+  line-height: 1;
+  padding: 20px;
+}
+.nav-primary a:hover, .nav-primary a:active, .nav-primary a:focus {
+  color: #fff;
+  background-color: #34495E;
+}
+.nav-primary ul ul {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 3;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+}
+.nav-primary ul ul ul {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  z-index: 3;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+}
+.nav-primary ul li:hover > ul, .nav-primary ul li:active > ul, .nav-primary ul li:focus > ul,
+.nav-primary ul ul li:hover > ul,
+.nav-primary ul ul li:active > ul,
+.nav-primary ul ul li:focus > ul {
+  display: block;
+}
+.nav-primary .sub-menu {
+  text-align: left;
+}
+.nav-primary .sub-menu li {
+  display: block;
+  margin: 0;
+}
+.nav-primary .sub-menu a {
+  display: block;
+  color: #fff;
+  white-space: nowrap;
+  border-bottom: none;
+  padding: 20px;
+  background-color: #34495E;
+}
+.nav-primary .sub-menu a:hover, .nav-primary .sub-menu a:active, .nav-primary .sub-menu a:focus {
+  color: #34495E;
+  background-color: #fff;
+}
 
 .icon-menu,
 .icon-close {
   display: none;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 @media (max-width: 1024px) {
   .icon-close {
@@ -306,53 +170,55 @@ footer {
     padding: 0 0 0 15px;
     font-size: 65px;
     line-height: 60px;
-    height: 50px; }
+    height: 50px;
+  }
 
   .icon-menu {
     position: absolute;
     top: 10px;
     right: 10px;
     display: block;
-    border-bottom: none;
     font-size: 65px;
-    line-height: 0.5; }
-    .icon-menu:hover, .icon-menu:active, .icon-menu:focus {
-      border-bottom: none; }
+    line-height: 0.5;
+  }
 
   .nav-primary {
     position: fixed;
     top: 0;
     right: -1024px;
-    background-color: #E74C3C;
+    background-color: #2C3E50;
     width: 1024px;
     max-width: 100%;
     height: 100%;
-    padding: 0; }
-    .nav-primary > ul {
-      height: 75vh;
-      overflow-y: auto; }
-    .nav-primary ul ul,
-    .nav-primary ul ul ul {
-      display: block;
-      position: static; }
-    .nav-primary li {
-      display: block;
-      margin: 0; }
-    .nav-primary a,
-    .nav-primary .sub-menu a {
-      display: block;
-      width: 100%;
-      background-color: transparent;
-      text-align: left;
-      padding: 5px 25px;
-      border-bottom: none; }
-      .nav-primary a:hover, .nav-primary a:active, .nav-primary a:focus,
-      .nav-primary .sub-menu a:hover,
-      .nav-primary .sub-menu a:active,
-      .nav-primary .sub-menu a:focus {
-        border-bottom: none;
-        background-color: #C0392B; }
-    .nav-primary li:hover > a {
-      border-bottom: none; } }
+    padding: 0;
+  }
+  .nav-primary > ul {
+    height: 75vh;
+    overflow-y: auto;
+  }
+  .nav-primary ul ul,
+  .nav-primary ul ul ul {
+    display: block;
+    position: static;
+  }
+  .nav-primary li {
+    display: block;
+    margin: 0;
+  }
+  .nav-primary a,
+  .nav-primary .sub-menu a {
+    display: block;
+    width: 100%;
+    background-color: transparent;
+    text-align: left;
+    padding: 5px 25px;
+  }
+  .nav-primary a:hover, .nav-primary a:active, .nav-primary a:focus,
+  .nav-primary .sub-menu a:hover,
+  .nav-primary .sub-menu a:active,
+  .nav-primary .sub-menu a:focus {
+    background-color: #34495E;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
