--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,5 +1,6 @@
+/* Navigation */
 .nav-primary {
-	padding: 25px 0;
+	background-color: $white;
 	ul {
 		margin: 0;
 		padding: 0;
@@ -9,26 +10,31 @@
 		position: relative;
 		list-style-type: none;
 		display: inline-block;
-		margin: 0 2.5vw;
+		margin: 0 1vw;
 		&:hover > a {
-			border-bottom: 2px solid $white;
+			background-color: $primary;
+			color: $white;
 		}
 	}
 	a {
+		display: block;
 		text-decoration: none;
-		color: $white;
-		padding: 0 3px;
-		border-bottom: 2px solid transparent;
+		color: $primary;
+		background-color: $white;
+		line-height: 1;
+		padding: 20px;
 		&:hover, &:active, &:focus {
-			border-bottom: 2px solid $white;
+			color: $white;
+			background-color: $primary;
 		}
 	}
 	ul ul {
 		display: none;
 		position: absolute;
-		top: calc(100% + 3px);
+		top: 100%;
 		left: 0;
 		z-index: 3;
+		box-shadow: 1px 1px 1px rgba($black,0.25);
 	}
 	ul ul ul {
 		display: none;
@@ -36,6 +42,7 @@
 		top: 0;
 		left: 100%;
 		z-index: 3;
+		box-shadow: 1px 1px 1px rgba($black,0.25);
 	}
 	ul li,
 	ul ul li {
@@ -50,7 +57,7 @@
 		display: block;
 		margin: 0;
 		&:hover > a {
-			border-bottom: none;
+			//
 		}
 	}
 	.sub-menu a {
@@ -58,10 +65,11 @@
 		color: $white;
 		white-space: nowrap;
 		border-bottom: none;
-		padding: 10px 16px;
-		background-color: $dk-red;
+		padding: 20px;
+		background-color: $primary;
 		&:hover, &:active, &:focus {
-			background-color: $green;
+			color: $primary;
+			background-color: $white;
 		}
 	}
 }
@@ -72,6 +80,7 @@
 	cursor: pointer;
 }
 
+/*  */
 @media (max-width: 1024px) {
 	.icon-close {
 		display: block;
@@ -86,18 +95,18 @@
 		top: 10px;
 		right: 10px;
 		display: block;
-		border-bottom: none;
+		//border-bottom: none;
 		font-size: 65px;
 		line-height: 0.5;
 		&:hover, &:active, &:focus {
-			border-bottom: none;
+			//border-bottom: none;
 		}
 	}
 	.nav-primary {
 		position: fixed;
 		top: 0;
 		right: -1024px;
-		background-color: $red;
+		background-color: $secondary;
 		width: 1024px;
 		max-width: 100%;
 		height: 100%;
@@ -122,14 +131,14 @@
 			background-color: transparent;
 			text-align: left;
 			padding: 5px 25px;
-			border-bottom: none;
+			//border-bottom: none;
 			&:hover, &:active, &:focus {
-				border-bottom: none;
-				background-color: $dk-red;
+				//border-bottom: none;
+				background-color: $primary;
 			}
 		}
 		& li:hover > a {
-			border-bottom: none;
+			//border-bottom: none;
 		}
 	}
 }
