big improvements to make the navigation accessible

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -12,6 +12,7 @@ $midnight-blue: #2C3E50;
 // Functional
 $primary: $wet-asphalt;
 $secondary: $midnight-blue;
+$tertiary: $green-sea;
 
 // Typography
 $poppins: 'Poppins', sans-serif;
