--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -17,14 +17,22 @@ body {
 	color: $secondary;
 	line-height: 1.5;
 	margin: 0;
-	padding: 5% 25px 0;
+	padding: 100px 25px 25px;
+
+	@media (max-width: 1024px) {
+		padding: 50px 25px 25px;
+	}
 }
 
 .wrap {
 	background-color: $gray;
 	max-width: 1200px;
 	margin: 0 auto;
-	padding: 0;
+	padding: 50px;
+
+	@media (max-width: 768px) {
+		padding: 5%;
+	}
 }
 
 .screen-reader-text {
@@ -58,27 +66,31 @@ a {
 }
 
 .content {
-	padding: 50px;
+	//padding: 50px;
 }
 
 h1 {
-	font-size: 3.25vw;
+	font-size: 3.5rem;
 	font-weight: 300;
 	text-align: center;
-	margin: 0 0 0.67em;
+	margin: 0;
+
+	@media (max-width: 768px) {
+		font-size: 8vw;
+	}
 }
 
 h2 {
-	font-size: 2.5em;
+	font-size: 2.5rem;
 	font-weight: 300;
 }
 
 p {
-	margin: 2.5em 0;
+	margin: 1rem 0;
 }
 
 footer {
 	text-align: center;
-	margin: 1em 0 0;
+	margin: 1rem 0 0;
 	color: $gray;
 }
