--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -9,14 +9,14 @@
 	ul {
 		margin: 0;
 		padding: 0;
-		text-align: center;
+		text-align: left;
 	}
 
 	li {
 		position: relative;
 		list-style-type: none;
 		display: inline-block;
-		margin: 0 1vw;
+		margin: 0;
 
 		&::before { /* https://developer.mozilla.org/en-US/docs/Web/CSS/list-style-type | Accessibility concerns */
 			content: "\200B";
@@ -102,27 +102,38 @@
 	}
 }
 
+.menu-icon {
+	display: block;
+	height: 35px;
+	font-size: 65px;
+}
+
 .menu-open {
 	display: none;
 	cursor: pointer;
 	position: absolute;
 	top: 10px;
-	left: 10px;
-	font-size: 65px;
-	line-height: 0.5;
+	left: 20px;
 	color: $white;
+
+	.menu-icon {
+		width: 35px;
+		line-height: 30px;
+	}
 }
 
 .menu-close {
 	display: none;
 	cursor: pointer;
-	height: 50px;
-	margin: 5px 0 0;
-	padding: 0 0 0 15px;
-	font-size: 65px;
-	line-height: 60px;
-	text-align: right;
+	position: absolute;
+	top: 10px;
+	right: 0;
 	color: $white;
+
+	.menu-icon {
+		width: 47px;
+		line-height: 45px;
+	}
 }
 
 /* Mobile Styles */
@@ -145,6 +156,10 @@
 		height: 100vh;
 		overflow-y: auto;
 		padding: 0;
+
+		& > ul {
+			margin-top: 50px;
+		}
 
 		ul ul,
 		ul ul ul {
