--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -28,10 +28,10 @@ body {
 	background-color: $gray;
 	max-width: 1200px;
 	margin: 0 auto;
-	padding: 50px;
+	padding: 20px;
 
 	@media (max-width: 768px) {
-		padding: 5%;
+		padding: 2.5%;
 	}
 }
 
@@ -49,6 +49,12 @@ a {
 	&:hover, &:active, &:focus {
 		//
 	}
+}
+
+button {
+    -webkit-appearance: none;
+    background: none;
+    border: none;
 }
 
 .link {
@@ -87,6 +93,103 @@ h2 {
 
 p {
 	margin: 1rem 0;
+}
+
+.header {
+    position: relative;
+    padding: 20px 20px 65px;
+    background-color: $primary;
+    color: $white;
+    text-align: center;
+    z-index: 0;
+
+    .svg_circle {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 100%;
+        height: 100%;
+        transform: translateX(-50%);
+        z-index: -1;
+    }
+
+    p {
+        max-width: 400px;
+        margin: -2rem auto 2.5rem;
+        font-size: 1.5rem;
+        font-weight: 300;
+    }
+
+    a {
+        color: $white;
+
+        &:hover,
+        &:active {
+            color: $yellow;
+        }
+    }
+
+    .button {
+        @include yellow-button;
+    }
+}
+
+.top_home_links {
+    .home_links {
+        display: inline-block;
+        width: 49.5%;
+    }
+
+    .home_links:nth-of-type(1) {
+        text-align: left;
+    }
+
+    .home_links:nth-of-type(2) {
+        text-align: right;
+    }
+}
+
+.content {
+    background-color: $gray;
+    padding: 20px 0 0;
+    display: flex;
+
+    .yellow_box,
+    .img_box {
+        width: calc(50% - 10px);
+    }
+
+    .yellow_box {
+        background-color: $yellow;
+        color: $primary;
+        margin: 0 10px 0 0;
+        padding: 65px 100px;
+
+        .sub_head {
+            margin: 0;
+        }
+
+        p {
+            font-size: 1.25rem;
+            font-weight: 300;
+        }
+
+        .button {
+            @include blue-button;
+            display: block;
+            margin: 1.5rem 0 0;
+        }
+    }
+
+    .img_box {
+        margin: 0 0 0 10px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 }
 
 footer {
