organizing files, fixing mobile nav

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -17,6 +17,8 @@ $tertiary: $yellow;
 
 // Typography
 $poppins: 'Poppins', sans-serif;
+$northwellalt: 'NorthwellAlt', script;
+$northwell: 'Northwell', script;
 
 // Buttons
 @mixin yellow-button {
