--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -54,6 +54,7 @@ button {
     -webkit-appearance: none;
     background: none;
     border: none;
+    display: block;
 }
 
 h1 {
@@ -76,8 +77,44 @@ p {
 	margin: 1rem 0;
 }
 
-footer {
+footer.content {
+	position: relative;
 	text-align: center;
 	margin: 1rem 0 0;
-	color: $gray;
+	padding: 20px 25px 18px;
+	color: $primary;
+	background-color: $yellow;
+
+	span {
+		display: inline-block;
+		vertical-align: middle;
+	}
+
+	.footer_logo {
+		position: absolute;
+		top: -15px;
+		left: 30px;
+		display: block;
+		width: 70px;
+		font-family: $northwell;
+		font-size: 5rem;
+	}
+
+	.tagline {
+		width: 73%;
+		font-size: 1.25rem;
+		text-align: right;
+		line-height: 1;
+		margin-top: 10px;
+	}
+
+	.copyright {
+		font-size: 0.95rem;
+		font-weight: 600;
+		width: 27%;
+		text-align: right;
+		text-transform: uppercase;
+		line-height: 1.25;
+		letter-spacing: 2px;
+	}
 }
