--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,4 +1,10 @@
 /* Navigation */
+a[href="#skip-nav"] {
+	position: absolute;
+	top: -9999px;
+	left: -9999px;
+}
+
 .nav-primary {
 	position: fixed;
 	top: 0;
@@ -19,7 +25,11 @@
 		display: inline-block;
 		margin: 0;
 
-		&::before { /* https://developer.mozilla.org/en-US/docs/Web/CSS/list-style-type | Accessibility concerns */
+		/* 
+		* https://developer.mozilla.org/en-US/docs/Web/CSS/list-style-type
+		* List Style Type | Accessibility concerns
+		*/
+		&::before {
 			content: "\200B";
 			position: absolute;
 			top: -9999px;
@@ -124,7 +134,7 @@
 	font-size: 65px;
 }
 
-.menu-open {
+a.menu-open {
 	display: none;
 	cursor: pointer;
 	position: absolute;
@@ -138,7 +148,7 @@
 	}
 }
 
-.menu-close {
+a.menu-close {
 	display: none;
 	cursor: pointer;
 	position: absolute;
@@ -154,11 +164,11 @@
 
 /* Mobile Styles */
 @media (max-width: 1024px) {
-	.menu-open {
+	a.menu-open {
 		display: block;
 	}
 
-	.menu-close {
+	a.menu-close {
 		display: block;
 	}
 
