--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -57,6 +57,14 @@
 	padding: 20px 0 0;
 	display: flex;
 
+	@media (max-width: 960px) {
+		display: block;
+	}
+
+	@media (max-width: 768px) {
+		padding: 2.5% 0 0;
+	}
+
 	.sub_head {
 		font-family: $northwell;
 		font-size: 5rem;
@@ -74,6 +82,10 @@
 	.svg_box,
 	.img_left {
 		width: calc(50% - 10px);
+
+		@media (max-width: 960px) {
+			width:  100%;
+		}
 	}
 
 	.yellow_box {
@@ -81,6 +93,15 @@
 		color: $primary;
 		margin: 0 10px 0 0;
 		padding: 80px 80px 50px;
+
+		@media (max-width: 960px) {
+			margin: 0 0 20px;
+			padding: 12.5% 7.5% 5%;
+		}
+
+		@media (max-width: 960px) {
+			margin: 0 0 2.5%;
+		}
 
 		.button {
 			@include blue-button;
@@ -90,9 +111,14 @@
 
 	.img_right {
 		margin: 0 0 0 10px;
+
+		@media (max-width: 960px) {
+			margin: 0;
+		}
 	}
 
 	img {
+		display: block;
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
@@ -109,6 +135,21 @@
 
 		&:nth-of-type(3) {
 			margin-right: 0;
+			margin-bottom: 0;
+		}
+
+		@media (max-width: 1024px) {
+			padding: 35px 2.5% 85px;
+		}
+
+		@media (max-width: 960px) {
+			width: 100%;
+			margin: 0 0 20px;
+		}
+
+		@media (max-width: 768px) {
+			margin: 0 0 2.5%;
+			padding: 35px 5% 85px;
 		}
 
 		.sub_head {
@@ -151,6 +192,15 @@
 		margin: 0 0 0 10px;
 		padding: 80px 100px 50px;
 
+		@media (max-width: 960px) {
+			margin: 0 0 20px;
+			padding: 12.5% 7.5% 5%;
+		}
+
+		@media (max-width: 960px) {
+			margin: 0 0 2.5%;
+		}
+
 		.sub_head {
 			margin-bottom: 1rem;
 			text-align: center;
@@ -159,5 +209,13 @@
 
 	.img_left {
 		margin: 0 10px 0 0;
+
+		@media (max-width: 960px) {
+			margin: 0 0 20px;
+		}
+
+		@media (max-width: 960px) {
+			margin: 0 0 2.5%;
+		}
 	}
 }
