--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -1,10 +1,14 @@
 .header {
 	position: relative;
-	padding: 20px 20px 65px;
+	padding: 25px 25px 65px;
 	background-color: $primary;
 	color: $white;
 	text-align: center;
 	z-index: 0;
+
+	@media (max-width: 768px) {
+		padding: 15px;
+	}
 
 	.svg_circle {
 		position: absolute;
@@ -14,6 +18,14 @@
 		height: 100%;
 		transform: translateX(-50%);
 		z-index: -1;
+
+		@media (max-width: 768px) {
+			height: 85%;
+		}
+
+		@media (max-width: 385px) {
+			//height: 66.666%;
+		}
 	}
 
 	p {
@@ -21,6 +33,11 @@
 		margin: -2rem auto 2.5rem;
 		font-size: 1.5rem;
 		font-weight: 300;
+
+		@media (max-width: 385px) {
+			margin: -3rem auto 1rem;
+    	font-size: 1rem;
+		}
 	}
 
 	a {
@@ -40,11 +57,12 @@
 .top_home_links {
 	.home_links {
 		display: inline-block;
-		width: 49.5%;
+		width: 49%;
 	}
 
 	.home_links:nth-of-type(1) {
 		text-align: left;
+		white-space: nowrap;
 	}
 
 	.home_links:nth-of-type(2) {
@@ -70,7 +88,11 @@
 		font-size: 5rem;
 		line-height: 1;
 		margin: 0;
+
+		@media (max-width: 414px) {
+			font-size: 4rem;
 		}
+	}
 
 	p {
 		font-size: 1.1rem;
@@ -106,6 +128,10 @@
 		.button {
 			@include blue-button;
 			margin: 1rem 0 0;
+
+			@media (max-width: 414px) {
+				margin: 0;
+			}
 		}
 	}
 
