--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -5,6 +5,7 @@
 	color: $white;
 	text-align: center;
 	z-index: 0;
+	overflow: hidden;
 
 	@media (max-width: 768px) {
 		padding: 15px;
@@ -12,12 +13,23 @@
 
 	.svg_circle {
 		position: absolute;
-		top: 0;
+		top: -65px;
 		left: 50%;
-		width: 100%;
-		height: 100%;
-		transform: translateX(-50%);
+		width: 630px;
+		height: 630px;
+		max-width: 100%;
+		margin-left: -315px;
 		z-index: -1;
+		animation: rotate 60s infinite linear;
+
+		@keyframes rotate {
+			from {
+				-webkit-transform: rotate(0deg);
+			}
+			to {
+				-webkit-transform: rotate(359deg);
+			}
+		}
 
 		@media (max-width: 768px) {
 			height: 85%;
