--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -4,11 +4,11 @@ $white: #fff;
 $black: #000;
 $gray: #eaeaea;
 $green-sea: #16a085;
-$pomegranate: #C0392B;
-$alizarin: #E74C3C;
-$wet-asphalt: #34495E;
-$midnight-blue: #2C3E50;
-$yellow: #F2D77E;
+$pomegranate: #c0392b;
+$alizarin: #e74c3c;
+$wet-asphalt: #34495e;
+$midnight-blue: #2c3e50;
+$yellow: #f2d77e;
 
 // Functional
 $primary: $wet-asphalt;
@@ -16,65 +16,65 @@ $secondary: $midnight-blue;
 $tertiary: $yellow;
 
 // Typography
-$poppins: 'Poppins', sans-serif;
-$northwellalt: 'NorthwellAlt', script;
-$northwell: 'Northwell', script;
+$poppins: "Poppins", sans-serif;
+$northwellalt: "NorthwellAlt", script;
+$northwell: "Northwell", script;
 
 // Buttons
 @mixin yellow-button {
-	display: inline-block;
-	font-size: 0.95rem;
-	font-weight: 600;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	color: $primary;
-	padding: 15px 35px;
-	background-color: $yellow;
-	border-radius: 50vh;
-	border: 3px solid $yellow;
-	transition: all 0.3s ease;
+  display: inline-block;
+  font-size: 0.95rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: $primary;
+  padding: 15px 35px;
+  background-color: $yellow;
+  border-radius: 50vh;
+  border: 3px solid $yellow;
+  transition: all 0.3s ease;
 
-		&:hover,
-		&:active {
-				background-color: $white;
-				color: $primary;
-		}
+  &:hover,
+  &:active {
+    background-color: $white;
+    color: $primary;
+  }
 
-		@media (max-width: 500px) {
-			padding: 10px 25px;
+  @media (max-width: 500px) {
+    padding: 10px 25px;
 
-			span {
-				display: block;
-			}
-		}
+    span {
+      display: block;
+    }
+  }
 }
 
 @mixin blue-button {
-	display: inline-block;
-	font-size: 0.95rem;
-	font-weight: 600;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	color: $white;
-	padding: 15px 35px;
-	background-color: $primary;
-	border-radius: 50vh;
-	border: 3px solid $primary;
-	transition: all 0.3s ease;
+  display: inline-block;
+  font-size: 0.95rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: $white;
+  padding: 15px 35px;
+  background-color: $primary;
+  border-radius: 50vh;
+  border: 3px solid $primary;
+  transition: all 0.3s ease;
 
-		&:hover,
-		&:active {
-				background-color: $white;
-				color: $primary;
-		}
+  &:hover,
+  &:active {
+    background-color: $white;
+    color: $primary;
+  }
 
-		@media (max-width: 500px) {
-			padding: 10px 35px;
+  @media (max-width: 500px) {
+    padding: 10px 35px;
 
-			span {
-				display: block;
-			}
-		}
+    span {
+      display: block;
+    }
+  }
 }
 
 // sass --watch scss/style.scss:style.css --style compressed
