--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -1,7 +1,13 @@
 .form {
   width: 100%;
-  padding: 4rem 2rem 2rem;
+  padding: 2rem;
   background-color: $primary;
+
+  .block_header {
+    text-align: center;
+    margin: 1rem 0;
+    color: $white;
+  }
 
   .form_wrap {
     width: 768px;
@@ -24,7 +30,7 @@
   textarea,
   input:not(#submit) {
     width: 100%;
-    border: $secondary 2px solid;
+    border: $secondary 3px solid;
     background-color: $white;
     margin-bottom: 8px;
     padding: 15px;
@@ -33,7 +39,7 @@
 
     &:hover,
     &:active {
-      border: $tertiary 2px solid;
+      border: $tertiary 3px solid;
     }
   }
 
