--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,7 +2,8 @@
 // http://designmodo.github.io/Flat-UI/
 $white: #fff;
 $black: #000;
-$gray: #eaeaea;
+// $gray: #eaeaea;
+$gray: #f8f8f8;
 $green-sea: #16a085;
 $pomegranate: #c0392b;
 $alizarin: #e74c3c;
