--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -56,11 +56,37 @@ a {
   }
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 button {
   -webkit-appearance: none;
   background: none;
   border: none;
   display: block;
+}
+
+.header {
+  padding: 0 25px;
+  background-color: $primary;
+  color: $white;
+  text-align: center;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+
+  @media (max-width: 768px) {
+    padding: 15px;
+  }
+
+  .svg__initials {
+    display: block;
+    width: 125px;
+    height: auto;
+  }
 }
 
 h1 {
