--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -1,4 +1,4 @@
-.header {
+.home_header {
   position: relative;
   padding: 25px 25px 65px;
   background-color: $primary;
@@ -169,7 +169,7 @@
     background-color: $primary;
     color: $yellow;
     margin: 0 20px 0 0;
-    padding: 40px 50px 70px;
+    padding: 40px 65px 80px;
 
     &:nth-of-type(3) {
       margin-right: 0;
