--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: auto;
   background-color: $yellow;
+  border-bottom: 3px solid $primary;
   z-index: 3;
 
   .social__items {
@@ -48,7 +49,7 @@
 
 .nav-primary {
   position: fixed;
-  top: 35px;
+  top: 38px;
   left: 0;
   width: 100%;
   background-color: $white;
